# dumpulator

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yml
MiniDumpPlugin/: .gitignore  CMakeLists.txt  README.md  cmake.toml
MiniDumpPlugin/cmake/: cmkr.cmake  x64dbg.cmake
MiniDumpPlugin/src/: plugin.cpp  plugin.h  pluginmain.cpp  pluginmain.h
src/dumpulator/: __init__.py  details.py  dumpulator.py  handles.py  memory.py  modules.py  native.py  ntdevices.py  ntenums.py  ntprimitives.py  ntstructs.py  ntsyscalls.py  syscalls.py
src/minidump/: README.md  __amain__.py  __init__.py  __main__.py  _version.py  aminidumpfile.py  aminidumpreader.py  common_structs.py  constants.py  directory.py  exceptions.py  header.py  minidumpfile.py  minidumpreader.py  minidumpshell.py  win_datatypes.py  writer.py
src/minidump/streams/: CommentStreamA.py  CommentStreamW.py  ContextStream.py  ExceptionStream.py  (+19 more)
tests/: download_artifacts.py  emulate-process.py  emulate-process32.py  exception-test32.py  exception-test64.py  execute-dump.py  getting-started.py  getting-started32.py  handle-dump.py  handle-test32.py  handle-test64.py  handle_dmp_test.py  handletest.py  harness-tests.py  memory_test.py  moduletest.py  run-tests.py  test_file.txt  x64dbg-tracedump.py
tests/DumpulatorTests/: .gitignore  DumpulatorTests.sln  README.md
tests/ExceptionTest/: ExceptionTest.sln
tests/HandleTest/: HandleTest.sln
tests/StringEncryptionFun/: .gitignore  StringEncryptionFun.sln
utils/: .gitignore  parse_phnt.py  phnt.c
(+44 files in other folders)
