# Source: https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata

[metadata]
name = dumpulator
version = v0.0.3
author = Duncan Ogilvie
author_email = dumpulator@mrexodia.re
description = An easy-to-use library for emulating code in minidump files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrexodia/dumpulator
project_urls =
    Bug Tracker = https://github.com/mrexodia/dumpulator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    #minidump ~=0.0.21 # this library has a bug, is vendored locally
    unicorn ~=1.0.3
    pefile >=2021.9.3
    capstone ~=4.0.2

[options.packages.find]
where = src
